--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -1,6 +1,118 @@
-/* How to make a comment*/
+/* box sizing */
 
-Body{
-    background-color:blue;
-    font-family: 'Yaldevi', sans-serif;
+html {
+  box-sizing: border-box;
 }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/*Utility Classes*/
+.container{
+  width:70vw;
+  margin: 40px auto;
+  max-width:960px;
+}
+
+
+body{
+      font-family: 'Lato', sans-serif;
+      margin:0;
+      }
+      
+     header.primary{
+         background:#B371DB;
+         text-align:center;
+         color:#ffffff;
+         text-shadow:2px 2px #000000;
+         padding: 20px 40px;/* Top/Bottom and Right/Left*/
+         
+     }
+     
+     header.primary h1{
+         font-size:3.2rem;
+         margin:20px 0;
+     }
+     
+     header.primary h1 a{
+         color:#ffffff;
+         text-decoration: none;
+     }
+     
+     header.primary h2{
+         font-size: 1.8rem;
+         margin:20px auto 20px;
+     }
+     
+     header.primary nav{
+         
+         width:80vw;
+         margin:20px auto;
+         max-width:900px; 
+     }
+
+header.primary nav ul{
+    padding:0;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+}
+
+header.primary nav ul li{
+    list-style-type: none;
+    
+}
+header.primary nav ul li a{
+    color:#ffffff;
+    text-decoration:none;
+    background:black;
+    background-color:rgba(0,0,0,.4);
+    padding: 8px 16px;
+    border-radius: 20px;
+    transition: .5s;
+    
+}
+
+header.primary nav a:hover,
+header.primary nav a:active{
+background-color:rgba(0,0,0,.8);
+}
+
+#intro{
+    border-bottom: :1px solid #c0c0c0;
+    padding-bottom:1rem;
+}
+#intro h2{
+  color:#
+}
+/* better to do this in th ebody, so everything is the same
+( line-height:1.4)*/
+
+#intro p{
+    line-height:1.4; 
+}
+
+#content{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+}
+/*Media Query Example*/
+
+@media screen and (max-width:700px){
+    header.promary nav ul{
+        display:flex;
+        flex-direction:column;
+        justify-content:space-around;
+        margin:0 auto;
+    }
+    header.primary nav a{
+        display:block;
+    }
+    header.primary nav li{
+        margin-bottom:10px;
+    }
+}
+
