--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(BackgroundSpace.jpg);
+    background-image:url("../img/background-space.jpeg");
     background-color:#FA69E5;
     
     font-family: 'Lato', sans-serif;
