--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -9,11 +9,74 @@ html {
   box-sizing: inherit;
 }
 
+/* ---------------Responsive Images----------------- */
+img{
+  max-width:100%;
+  height:auto;
+}
+
 /*Utility Classes*/
 .container{
   width:70vw;
   margin: 40px auto;
   max-width:960px;
+}
+.img-right{
+  float:right;
+  border:1px solid #c0c0c0;
+  padding:5px;
+  border-radius:6px;
+  margin-left:20px;
+}
+.img-left{
+  float:left;
+  border:1px solid #c0c0c0;
+  padding:5px;
+  border-radius:6px;
+  margin-right:20px;
+}
+.img-center {
+  display:block;
+  border:1px solid #c0c0c0;
+  padding:5px;
+  border-radius:6px;
+  margin: 20px auto;
+}
+
+#additional-elements h3{
+  border-left: 10px solid #3b638b;
+  padding:5px 10px;;
+}
+table{
+  width:100%;
+  border:1px solid #c0c0c0;
+  border-collapse:collapse;
+  
+}
+table caption{
+  color:#3b638b;
+  padding:10px;
+  font-weight:bold;
+  font-size:1.4rem;
+}
+table tr:nth-child(even){
+    background-color:rgba(0,0,0,.1);
+    table tr:hover{
+    background-color:rgba(0,0,0,.2);
+}
+table tr:hover{
+  background-color:rgba(0,0,0,.25);
+}
+}
+table td{
+  border:1px solid #c0c0c0;
+  padding:5px;
+}
+table th{
+  background-color:#172635;
+  color:#fff;
+  width:33%;
+  padding:10px;
 }
 
 
@@ -23,7 +86,12 @@ body{
       }
       
      header.primary{
-         background:#B371DB;
+         background: #B371DB;
+background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' 
+viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC'
+fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 
+40'/%3E%3C/g%3E%3C/svg%3E");
+
          text-align:center;
          color:#ffffff;
          text-shadow:2px 2px #000000;
@@ -81,11 +149,11 @@ background-color:rgba(0,0,0,.8);
 }
 
 #intro{
-    border-bottom: :1px solid #c0c0c0;
+    border-bottom:1px solid #c0c0c0;
     padding-bottom:1rem;
 }
 #intro h2{
-  color:#
+  color:#9E72F2; 
 }
 /* better to do this in th ebody, so everything is the same
 ( line-height:1.4)*/
@@ -99,10 +167,140 @@ background-color:rgba(0,0,0,.8);
     flex-direction:row;
     justify-content:space-between;
 }
+
+#content article.post{
+  width:30%;
+  box-shadow:0 4px 8px rgba(0,0,0,.4);
+  padding:.7em;
+  font-size:.7rem;
+  border-radius:10px;
+  transition:.5s;
+}
+
+#content article.post:hover{
+  box-shadow:0 8px 16px rgba(0,0,0,.4);
+}
+
+article.post figure{
+    margin:0;
+}
+
+article.post time,article.post figcaption, article.post .post-meta{
+  font-size:.8em;
+  text-transform:uppercase;
+  color:#E472F2;
+}
+article.post img{
+  border-radius:6px;
+}
+article.post a:link, #content article a:visited{
+  color:#766DE8;
+}
+
+article.post a:hover, article.post a:active{
+ text-decoration:none;
+}
+#additional-elements h2{
+  color:#3b638b;
+  border-bottom:1px dotted #c0c0c0;
+}
+
+#additional-elements a:link, #additional-elements a:visited{
+  color:#3b638b;
+}
+
+#additional-elements a:hover, #additional-elements a:active{
+  text-decoration:none;
+}
+
+#additional-elements ol{
+  list-style-type:lower-roman;
+}
+
+#additional-elements ul{
+  list-style-type:square;
+}
+
+#additional-elements ul ul {
+  list-style-type:disc;
+}
+#additional-elements dl{
+  
+}
+
+#additional-elements dt{
+  font-weight:bold;
+  font-size:1.2rem;
+  margin-top: 20px;
+}
+#additional-elements dd{
+  margin:0;
+  
+}
+/* Adjacent Sibling Combinator */
+
+dd + dt {
+  margin-top:20px;
+}
+blockquote{
+  background:rgba(0,0,0,.15);
+  padding: 20px 40px;
+  border:5px double #c0c0c0;
+  border-radius:16px;
+  font-size:1.2em;
+}
+blockquote cite{
+  display:block;
+  text-align: right;
+  font-weight: bold;
+  font-size:.8rem;
+  padding-top: 1rem;
+}
+
+
+/* Attribute Selectors */
+aside[role="complementary"]{
+  background-color:#9E72F2;
+  /*could put. text color here*/
+  padding:2.2rem;
+}
+aside .container{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+}
+aside.article.widget{
+    width:45%;
+}
+aside a.read-more:link{
+    color:white;
+    display:block;
+    margin-top:10px;
+}
+
+aside article.widget footer{
+  display:none;
+}
+
+#colophon {
+  background-color: #E472F2;
+  /*backgroud image*/
+}
+
+#colophon h6{
+    padding:20px;
+    margin:0;
+    text-align:center;
+    color:#fff;
+    font-size:.8rem;
+    text-transform: uppercase;
+    text-shadow: 2px 2px #000000;
+}
+
 /*Media Query Example*/
 
 @media screen and (max-width:700px){
-    header.promary nav ul{
+    header.primary nav ul{
         display:flex;
         flex-direction:column;
         justify-content:space-around;
