--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,20 @@
+h1{
+  text-align: center;
+  color:white;
+  font-size: 5rem;
+}
+
+
 body{
     background-image:url("../img/background-space.jpeg");
-    background-color:#FA69E5;
+    /*background-color:#FA69E5;*/
+    text-align: center;
+    color:white;
     
     font-family: 'Lato', sans-serif;
       margin:0;
+}
+ul li a{
+  color: white;
+  text-align: inherit;
 }
