--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -45,11 +45,87 @@ body{
     margin:0;
 }
 
+header.primary nav a :link,
+header.primary nav a visited{
+    color:blue;
+    text-decoration: none;
+    background-color: #000000;
+    background-color: #B50AF2;
+    padding: 8px 16px;
+    border-radius: 12px;
+    transition: 0.6s;
+    display:block;
+}
+
+header.primary nav a: hover,
+header.primary nav a:active{
+    background-color: #D6A7F2;
+}
+
 header.primary::before{
     content: "";
     background-image:url(/ifsc-1310-fall-2021/dragon/assets/img/Dragon-Logo.png ");
+    background-size:cover;
+    position:absolute;
+    top: 0;
+    right:0;
+    bottom: 0;
+    left:0;
+    opacity: 0;
 }
 
+header.primary h1{
+         font-size:3.2rem;
+         margin:20px 0;
+         text-align: center;
+         text-shadow:2px 2px #000000;
+         padding: 20px 40px;
+         position:relative;
+     }
+     
+     header.primary h2{
+         font-size: 1.8rem;
+         margin:20px auto 20px;
+         text-align: center;
+         position:relative;
+     }
+     
+     header.primary nav ul{
+    padding:0;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    position:relative;
+}
+header.primary nav ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 8px 16px;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+header.primary nav ul li{
+    list-style-type: none;
+    
+}
+section#content{
+  padding:4rem;
+}
+section#content h2{
+  font-size: 2.2rem;
+         margin:20px auto 20px;
+         text-align: center;
+  
+}
+section#articles .container{
+  display: flex;
+  flex-direction:row;
+  justify-content:space-between;
+  flex-wrap:wrap;
+}
+/*-----YOU ARE HERE____*/
 
 table{
   width:100%;
