--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -64,7 +64,7 @@ header.primary nav a:active{
 
 header.primary::before{
     content: "";
-    background-image:url(/ifsc-1310-fall-2021/dragon/assets/img/Dragon-Logo.png );
+    background-image:url("../img/Dragon-Logo.png");
     background-size:cover;
     position:absolute;
     top: 0;
