--- a/dragon/assets/css/style.css
+++ b/dragon/assets/css/style.css
@@ -43,6 +43,7 @@ img{
 body{
     font-family: 'Roboto', sans-serif;
     margin:0;
+    line-height: 1.6;
 }
 
 header.primary nav a :link,
@@ -64,7 +65,7 @@ header.primary nav a:active{
 
 header.primary::before{
     content: "";
-    background-image:url("../img/Dragon-Logo.png");
+    background-image:url("../../../img/Dragon-Logo.png");
     background-size:cover;
     position:absolute;
     top: 0;
@@ -72,6 +73,7 @@ header.primary::before{
     bottom: 0;
     left:0;
     opacity: 0;
+    padding: 20px;
 }
 
 header.primary h1{
@@ -85,9 +87,16 @@ header.primary h1{
      
      header.primary h2{
          font-size: 1.8rem;
-         margin:20px auto 20px;
+         margin:20px 0px;
          text-align: center;
          position:relative;
+     }
+     
+     header.primary h3{
+       font-size: 1.6rem;
+       margin:20px 0;
+       text-align: center;
+       
      }
      
      header.primary nav ul{
@@ -119,16 +128,137 @@ section#content h2{
          text-align: center;
   
 }
-section#articles .container{
+#articles .post{
+  width:30%;
+  box-shadow:0 4px 8px rgba(0,0,0,.4);
+  padding:.7em;
+  font-size:.7rem;
+  border-radius:10px;
+  transition:.5s;
+  background-color:white;
+  margin:20px;
+}
+#articles{
   display: flex;
   flex-direction:row;
   justify-content:space-between;
-  flex-wrap:wrap;
+  /*flex-wrap:wrap;*/
+  background-color:black;
 }
+article.post figure{
+  margin:0;
+}
+article.post img {
+  border-radius: 6px;
+}
+
+
 #hero{
   padding:3em;
 }
+/*----maybe-->*/
 
+article.post a:link,
+article.post a:visited {
+  color: #3b638b;
+}
+article.post a:hover,
+article.post a:active {
+  text-decoration: none;
+}
+
+#additional-elements h2{
+  color:#3b638b;
+  border-bottom:1px dotted #c0c0c0;
+}
+
+#additional-elements a:link, #additional-elements a:visited{
+  color:#3b638b;
+}
+
+#additional-elements a:hover, #additional-elements a:active{
+  text-decoration:none;
+}
+
+#additional-elements ol{
+  list-style-type:lower-roman;
+}
+
+#additional-elements ul{
+  list-style-type:square;
+}
+
+#additional-elements ul ul {
+  list-style-type:disc;
+}
+
+#additional-elements dl{
+  
+}
+
+#additional-elements dt{
+  font-weight:bold;
+  font-size:1.2rem;
+  margin-top:20px;
+}
+
+#additional-elements dd{
+  margin:0;
+}
+
+/* Adjacent Sibling Combinator */
+
+dd + dt {
+  margin-top:20px;
+}
+
+blockquote{
+  background:rgba(0,0,0,.15);
+  padding: 20px 40px;
+  border:5px double #c0c0c0;
+  border-radius:16px;
+  font-size:1.2em;
+}
+
+blockquote cite{
+  display:block;
+  text-align:right;
+  font-weight:bold;
+  font-size:.6rem;
+  padding-top:1rem;
+}
+
+
+
+
+
+
+/* Attribute Selectors */
+aside[role="complementary"] {
+  background-color: #172635;
+  color: #fff;
+  padding: 2.2rem;
+}
+
+aside .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+aside article.widget {
+  width: 45%;
+}
+
+aside a.read-more:link {
+  color: white;
+  display: block;
+  margin-top: 10px;
+}
+
+aside article.widget footer {
+  display: none;
+}
 table{
   width:100%;
   border:1px solid #c0c0c0;
@@ -163,3 +293,12 @@ table th{
   width:33%;
   padding:10px;
 }
+
+
+
+
+
+
+
+
+
