--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@ body{
     font-family: 'Lato', sans-serif;
       margin:0;
 }
+h2{
+  background-color:black;
+  margin:20px;
+}
+p{
+  background-color:black;
+  margin:20px;
+}
 ul li a{
   color: white;
   text-align: inherit;
